# metrix_predict

./: LICENSE  README.md  setup.cfg
src/metrix_predict/: __init__.py  command_line.py  predict.py  predict_without_standardisation.py
src/metrix_predict/data/: sample.csv
tests/: results_predict.txt  test_metrix_predict.py
