[metadata]
# *distribution* name of package. Recommended to include username:
name = metrix_predict-mevol
version = 0.0.1
url = https://github.com/ccp4/metrix_predict
author = Melanie Vollmar
author_email = melanie.vollmar@diamond.ac.uk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
description = Predictions from METRIX
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    matplotlib
	numpy
	scikit-learn==0.22.2
	joblib

[options.packages.find]
where = src
