[metadata]
# *distribution* name of package. Recommended to include username:
name = metrix_predict-mevol
version = 1.0.0
url = https://github.com/ccp4/metrix_predict
author = Melanie Vollmar
author_email = melanie.vollmar@diamond.ac.uk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
description = Predictions from METRIX
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
	= src
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    matplotlib
	numpy
	scikit-learn==0.22.2
	joblib

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    metrix_predict = metrix_predict.command_line:main

[options.package_data]
* = data/*
